Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73289

tst_clientSSL::testRun() failed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.14.0 Alpha
    • 5.13
    • Remote Objects
    • None
    • All
    • d8d60696da8bbb168ac4554b51c96ea244e407b8 (qt/qtbase/dev)

    Description

      https://codereview.qt-project.org/#/c/250191/ Update submodules on 'dev' in qt5 - PS14

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1550205979

      https://testresults.qt.io/coin/api/results/qt/qtremoteobjects/763b96e1e56e6c513438ff88e6eeef881ac9dacd/MacOSMacOS_10_12x86_64MacOSMacOS_10_12x86_64Clangqtci-macos-10.12-x86_64-9-b5aed7DeveloperBuild_NoFramework_Release_QtNamespace_NoPch/98ec568246b8ff9af8e31de101150dda10cc9801/test_1550210129/log.txt.gz

      agent:2019/01/25 20:23:17 build.go:192: /Users/qt/work/qt/qtremoteobjects/tests/auto/external_IODevice/tst_client/target_wrapper.sh  ./tst_external_IODevice -o /Users/qt/work/testresults/tests/auto/external_IODevice/tst_client611782263,xml -o -,txt
      agent:2019/01/25 20:23:17 build.go:192: ********* Start testing of tst_clientSSL *********
      agent:2019/01/25 20:23:17 build.go:192: Config: Using QtTest library 5.13.0, Qt 5.13.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 9.0.0 (clang-900.0.39.2) (Apple))
      agent:2019/01/25 20:23:17 build.go:192: PASS   : tst_clientSSL::initTestCase()
      agent:2019/01/25 20:23:18 build.go:192: FAIL!  : tst_clientSSL::testRun() 'socketClient->waitForEncrypted(-1)' returned FALSE. ()
      agent:2019/01/25 20:23:18 build.go:192:    Loc: [tst_client.cpp(77)]
      agent:2019/01/25 20:23:18 build.go:192: QSslSocket::error QAbstractSocket::RemoteHostClosedError
      agent:2019/01/25 20:23:18 build.go:192: QWARN  : tst_clientSSL::testRun() QProcess: Destroyed while process ("/Users/qt/work/qt/qtremoteobjects/tests/auto/external_IODevice/sslTestServer/sslTestServer") is still running.
      agent:2019/01/25 20:23:18 build.go:192: PASS   : tst_clientSSL::cleanupTestCase()
      agent:2019/01/25 20:23:18 build.go:192: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 979ms
      agent:2019/01/25 20:23:18 build.go:192: ********* Finished testing of tst_clientSSL *********
      agent:2019/01/25 20:23:18 build.go:192: make: *** [check] Error 1
      agent:2019/01/25 20:23:18 build.go:236: Process finished with error: exit status 2
      agent:2019/01/25 20:23:18 build.go:195: Error reading from stdout/err: exit status 2
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            manordheim MÃ¥rten Nordheim
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes